# quantum_monte_carlo

./: CMakeLists.txt  README.md  compile_commands.json  continuous_beta=10.txt  continuous_beta=100.txt  continuous_beta=20.txt  continuous_beta=200.txt  continuous_beta=5.txt  continuous_beta=50.txt  discrete_beta=10.txt  discrete_beta=20.txt  discrete_beta=200.txt  discrete_beta=5.txt  discrete_beta=50.txt  plot_N=100.ipynb  plot_N=200.ipynb  plot_N=500.ipynb  plot_N=800.ipynb  plot_time.ipynb  readme.md  spin_glass.ipynb
data/N_100/: continuous_beta=100.txt  continuous_beta=200.txt  continuous_beta=50.txt  coupling_matrix.txt  discrete_beta=100.txt  discrete_beta=200.txt  discrete_beta=50.txt
data/N_1000/: amplify.txt  continuous_beta=100.txt  continuous_beta=200.txt  continuous_beta=50.txt  discrete_beta=100.txt  discrete_beta=200.txt  discrete_beta=50.txt
data/N_500/: continuous_beta=50.txt  discrete_beta=100.txt  discrete_beta=50.txt
main/: CMakeLists.txt
main/src/: main.cpp
my_header_lib/: CMakeLists.txt
my_header_lib/include/: brute_solve.hpp  pcg_extras.hpp  pcg_random.hpp  pimc_continuous.hpp  pimc_model.hpp
my_static_lib/: CMakeLists.txt
my_static_lib/src/: my_static_lib.cpp
test/: CMakeLists.txt
test/src/: my_header_lib_test.cpp
